# cardinal-cli

./: .gitignore  Cargo.toml
cardinal-cli/: Cargo.toml
cardinal-cli/src/: cli.rs  main.rs  output.rs  search.rs
raycast/: package-lock.json  package.json  tsconfig.json
raycast/src/: cli.ts  index.tsx  search.tsx  types.ts
