[package]
name = "cardinal-cli"
version = "0.1.0"
edition = "2024"
description = "CLI file search powered by Cardinal's engine — designed for Raycast integration"
license = "MIT"

[[bin]]
name = "cardinal-cli"
path = "src/main.rs"

[dependencies]
# Core cardinal crates (git dependencies from cardisoft/cardinal)
search-cache = { git = "https://github.com/cardisoft/cardinal.git" }
cardinal-sdk = { git = "https://github.com/cardisoft/cardinal.git" }
cardinal-syntax = { git = "https://github.com/cardisoft/cardinal.git" }
fswalk = { git = "https://github.com/cardisoft/cardinal.git" }
query-segmentation = { git = "https://github.com/cardisoft/cardinal.git" }
search-cancel = { git = "https://github.com/cardisoft/cardinal.git" }

# CLI
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
crossbeam-channel = "0.5.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
